[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = ["ufmt"] } # Use the git hook fro now due to a dependency problem in v0.1.0 https://github.com/esp-rs/esp-hal/issues/177#issuecomment-1234312965
riscv-rt = "0.8"
panic-halt = "0.2"
fugit = "0.3.6"
embedded-hal = { version = "0.2", features = ["unproven"] }