[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { version = "0.2.0", features = ["ufmt"] } 
riscv-rt = "0.8"
panic-halt = "0.2"
fugit = "0.3.6"
embedded-hal = { version = "0.2", features = ["unproven"] }